--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
             <img id="center-image" src="" alt="">
             <img id="right-image" src="" alt="">
         </div>
+        <canvas id="myChart" width="400" height="400"></canvas>
         <div id="button-div-containter">
             <div id="button-div">
                 <button id="ResultButton">View Results</button>
             </div>
         </div>
+     
 
 
     </main>
@@ -46,6 +48,7 @@
         <h1>All Rights Reserved &copy; 2021</h1>
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 <script src="js/app.js"></script>
 
 </html>
